--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,11 @@
 $navh: 45px;
 $navlineh: 45px;
 $padding-left: 35%;
+$background-color3: #e9e0b7;
+$border: 10px solid #dac087;
+$background-color2: #dac087;
+$background-color4: #f4f4f4;
+$background-color5: #4a3a3a;
+$background-color6: #2f1f1f;
+$orange-text: #d76c40;
+$small-font-size: 11px;
